feat: NAB.importTranslationWithDifferentSource

--- a/extension/package.json
+++ b/extension/package.json
@@ -639,6 +639,12 @@
             "default": false,
             "description": "Specifies if missing translation units should be ignored when importing translations from a .csv file into a XLIFF file. If this is disabled, an error will be shown if a translation unit is missing in the XLIFF file.",
             "scope": "resource"
+          },
+          "NAB.importTranslationWithDifferentSource": {
+            "type": "boolean",
+            "default": false,
+            "description": "Specifies if translation units with different source text should be allowed when importing translations from a .csv file into a XLIFF file. If this is disabled, an error will be shown if a translation unit with a different source text is found in the XLIFF file.",
+            "scope": "resource"
           }
         }
       },
