--- a/extension/package.json
+++ b/extension/package.json
@@ -531,16 +531,56 @@
                   "type": "string",
                   "description": "The language tag that should match the target-language attribute in the xliff file.",
                   "examples": [
-                    "sv-SE",
+                    "bg-BG",
+                    "zh-TW",
+                    "cs-CZ",
                     "da-DK",
-                    "en-US",
-                    "en-GB",
                     "de-DE",
-                    "fr-FR",
+                    "el-GR",
+                    "en-US",
                     "es-ES",
-                    "it-IT",
                     "fi-FI",
-                    "nb-NO"
+                    "fr-FR",
+                    "hu-HU",
+                    "is-IS",
+                    "it-IT",
+                    "ja-JP",
+                    "ko-KR",
+                    "nl-NL",
+                    "nb-NO",
+                    "pl-PL",
+                    "pt-BR",
+                    "ro-RO",
+                    "ru-RU",
+                    "hr-HR",
+                    "sk-SK",
+                    "sv-SE",
+                    "th-TH",
+                    "tr-TR",
+                    "uk-UA",
+                    "sl-SI",
+                    "et-EE",
+                    "lv-LV",
+                    "lt-LT",
+                    "vi-VN",
+                    "zh-CN",
+                    "de-CH",
+                    "en-GB",
+                    "es-MX",
+                    "fr-BE",
+                    "it-CH",
+                    "nl-BE",
+                    "pt-PT",
+                    "zh-HK",
+                    "de-AT",
+                    "en-AU",
+                    "es-ES",
+                    "fr-CA",
+                    "en-CA",
+                    "fr-CH",
+                    "en-NZ",
+                    "en-ZA",
+                    "sr-Latn-RS"
                   ]
                 },
                 "threeLetterAbbreviation": {
@@ -554,7 +594,7 @@
           "NAB.SkipTranslationPropertyForLanguage": {
             "type": "array",
             "default": [],
-            "description": "Specifies if one or more translation properties should be skipped for a specific language. This is useful when you do not want to translate a specific property for a specific language. For example, if you do not want to translate ToolTips or AboutTitle/AboutText in all languages. If the translation unit is missing in the translated xliff file, the text from the g.xlf file is used as fallback. This setting is used when the \"NAB: Refresh XLF files from g.xlf\" function is executed.",
+            "description": "Specifies if one or more translation properties should be skipped for a specific language. This is useful when you do not want to translate a specific property for a specific language. For example, if you do not want to translate ToolTips or AboutTitle/AboutText in all languages. Use the `keepTranslated` property of this setting if you want to keep the translation unit if it is already translated, or if it gets a match from another translation from BaseApp, current xlf or any other configured source. When running the app in Business Central, if a translation in the current language is missing, the text from the g.xlf file is used as fallback. This setting is used when the \"NAB: Refresh XLF files from g.xlf\" function is executed.",
             "items": {
               "description": "Specifies the settings per language",
               "properties": {
@@ -562,22 +602,82 @@
                   "type": "string",
                   "description": "The language tag that this setting should apply to. This is matched against the target-language attribute in the xliff file.",
                   "examples": [
-                    "sv-SE",
+                    "bg-BG",
+                    "zh-TW",
+                    "cs-CZ",
                     "da-DK",
-                    "en-US",
-                    "en-GB",
                     "de-DE",
-                    "fr-FR",
+                    "el-GR",
+                    "en-US",
                     "es-ES",
-                    "it-IT",
                     "fi-FI",
-                    "nb-NO"
+                    "fr-FR",
+                    "hu-HU",
+                    "is-IS",
+                    "it-IT",
+                    "ja-JP",
+                    "ko-KR",
+                    "nl-NL",
+                    "nb-NO",
+                    "pl-PL",
+                    "pt-BR",
+                    "ro-RO",
+                    "ru-RU",
+                    "hr-HR",
+                    "sk-SK",
+                    "sv-SE",
+                    "th-TH",
+                    "tr-TR",
+                    "uk-UA",
+                    "sl-SI",
+                    "et-EE",
+                    "lv-LV",
+                    "lt-LT",
+                    "vi-VN",
+                    "zh-CN",
+                    "de-CH",
+                    "en-GB",
+                    "es-MX",
+                    "fr-BE",
+                    "it-CH",
+                    "nl-BE",
+                    "pt-PT",
+                    "zh-HK",
+                    "de-AT",
+                    "en-AU",
+                    "es-ES",
+                    "fr-CA",
+                    "en-CA",
+                    "fr-CH",
+                    "en-NZ",
+                    "en-ZA",
+                    "sr-Latn-RS"
                   ]
+                },
+                "keepTranslated": {
+                  "type": "boolean",
+                  "description": "If enabled, the translation unit will be kept if it is already translated or if it gets a match from another translation from BaseApp, current xlf or any other configured source. If disabled, the translation unit will be removed from the translated xliff file.",
+                  "default": true
                 },
                 "skipTranslationProperties": {
                   "type": "array",
                   "description": "The translation properties that should be skipped for the selected language.",
-                  "default": [],
+                  "default": [
+                    "Label",
+                    "ReportLabel",
+                    "OptionCaption",
+                    "Caption",
+                    "ToolTip",
+                    "InstructionalText",
+                    "PromotedActionCategories",
+                    "RequestFilterHeading",
+                    "AdditionalSearchTerms",
+                    "EntityCaption",
+                    "EntitySetCaption",
+                    "ProfileDescription",
+                    "AboutTitle",
+                    "AboutText"
+                  ],
                   "items": {
                     "type": "string",
                     "description": "The translation property that should be skipped for the selected language.",
