feat: Create XLF with selected Source Language

--- a/extension/package.json
+++ b/extension/package.json
@@ -258,6 +258,10 @@
         "title": "NAB: Import Translations from .csv"
       },
       {
+        "command": "nab.createCrossLanguageXlf",
+        "title": "NAB: Create XLF with selected Source Language"
+      },
+      {
         "command": "nab.convertToPermissionSet",
         "title": "NAB: Convert to PermissionSet objects"
       },
