feat: Add functions to create XLF and import translations by ID (#495)
* feat: Create XLF with selected Source Language

* feat: Add NAB: Import Translations by Id function and update documentation

--- a/extension/package.json
+++ b/extension/package.json
@@ -258,6 +258,14 @@
         "title": "NAB: Import Translations from .csv"
       },
       {
+        "command": "nab.createCrossLanguageXlf",
+        "title": "NAB: Create XLF with selected Source Language"
+      },
+      {
+        "command": "nab.importTranslationsById",
+        "title": "NAB: Import Translations by Id"
+      },
+      {
         "command": "nab.convertToPermissionSet",
         "title": "NAB: Convert to PermissionSet objects"
       },
