--- a/extension/package.json
+++ b/extension/package.json
@@ -1081,7 +1081,7 @@
         }
       },
       {
-        "name": "getTranslatedTextsMap",
+        "name": "GetTranslatedTexts",
         "displayName": "Get Translated Texts from a XLF file",
         "modelDescription": "This tool retrieves translated texts from a specified XLF file. It returns an json array with objects containing source text with one or several target texts as an array. This can be used when working with translations to to figure out earlier used phrases and terms.",
         "tags": [
@@ -1090,7 +1090,7 @@
         ],
         "userDescription": "(beta) This tool retrieves translated texts from a specified XLF file. It can be used to find texts that have already been translated.",
         "canBeReferencedInPrompt": true,
-        "toolReferenceName": "nab-al-tools-getTranslatedTextsMap",
+        "toolReferenceName": "nab-al-tools-GetTranslatedTexts",
         "inputSchema": {
           "type": "object",
           "properties": {
