--- a/extension/package.json
+++ b/extension/package.json
@@ -1046,7 +1046,7 @@
       {
         "name": "getTextsToTranslate",
         "displayName": "Get texts to translate from a XLF file",
-        "modelDescription": "This tool retrieves untranslated texts from a specified XLF file. It returns an json array with objects containing the id, the source text that should be translated into a target text, the source language, the Max Length of the translated text (if any limit), and a comment if available. The comment is used to specify the content of placeholders (as %1, %2, %3 etc.), which can be used for context. This Tool can be used when working with translations.",
+        "modelDescription": "This tool retrieves untranslated texts from a specified XLF file. It returns a JSON array of objects containing: id (unique identifier), source text (to be translated), source language, maxLength (character limit if applicable), and contextual comments (explains placeholders like %1, %2, %3 etc.). This tool streamlines the translation workflow by identifying which texts need translation and providing essential context for accurate localization.",
         "tags": [
           "xliff",
           "translation"
@@ -1059,19 +1059,19 @@
           "properties": {
             "filePath": {
               "type": "string",
-              "description": "The absolute path to the XLF file from which untranslated texts should be retrieved."
+              "description": "The absolute path to the XLF file from which untranslated texts will be extracted."
             },
             "offset": {
               "type": "number",
-              "description": "The number of items to skip before starting to return results. Used to paginate through large sets of texts. This parameter is not needed if the translated texts is saved before this tool is called."
+              "description": "The starting position (zero-based index) for retrieving results. Used for pagination to skip a specific number of translation units before returning results."
             },
             "limit": {
               "type": "number",
-              "description": "The maximum number of items to return in this request. Used to control the size of each page of results. Use 0 to return all items."
+              "description": "The maximum number of untranslated texts to return. Set to 0 to retrieve all available texts."
             },
             "sourceLanguageFilePath": {
               "type": "string",
-              "description": "The absolute path to the source language file that should be used to retrieve the source text. The target text in this file will be used as 'source' in the response. This can be used to get any other language than en-US as source language, which is useful when translating similar languages, as Swedish, Danish and Norwegian. If not specified, the source text will be retrieved from the XLF file."
+              "description": "Optional. The absolute path to an alternative source language file. When specified, target texts from this file will be used as 'source' in the response. Useful for translating between similar languages (e.g., Swedish, Danish, Norwegian) instead of always using en-US as the source."
             }
           },
           "required": [
@@ -1083,7 +1083,7 @@
       {
         "name": "getTranslatedTexts",
         "displayName": "Get Translated Texts from a XLF file",
-        "modelDescription": "This tool retrieves translated texts from a specified XLF file. It returns a JSON array with objects containing source text with one or several target texts as an array. This can be used when working with translations to figure out earlier used phrases and terms.",
+        "modelDescription": "This tool retrieves previously translated texts from a specified XLF file. It returns a JSON array of translation objects, each containing the source text and its corresponding target translations. This tool helps maintain translation consistency by providing access to existing translations, allowing you to reference previously translated terms and phrases when working on new content.",
         "tags": [
           "xliff",
           "translation"
@@ -1096,19 +1096,19 @@
           "properties": {
             "filePath": {
               "type": "string",
-              "description": "The absolute path to the XLF file from which translated texts should be retrieved."
+              "description": "The absolute path to the XLF file from which to retrieve translated texts. This file should contain translation units with completed target elements."
             },
             "offset": {
               "type": "number",
-              "description": "The number of items to skip before starting to return results. Used to paginate through large sets of texts."
+              "description": "The starting position (zero-based index) for retrieving results. Used for pagination to skip a specific number of translation units before returning results."
             },
             "limit": {
               "type": "number",
-              "description": "The maximum number of items to return in this request. Used to control the size of each page of results. Use 0 to return all items."
+              "description": "The maximum number of translated texts to return in a single request. Controls result set size for pagination. Set to 0 to retrieve all available translations."
             },
             "sourceLanguageFilePath": {
               "type": "string",
-              "description": "The absolute path to the source language file that should be used to retrieve the source text. The target text in this file will be used as 'source' in the response. This can be used to get any other language than en-US as source language, which is useful when translating similar languages, as Swedish, Danish and Norwegian. If not specified, the source text will be retrieved from the XLF file."
+              "description": "Optional. The absolute path to an alternative source language file. When specified, target texts from this file will be used as 'source' in the response. Particularly useful when translating between similar languages (e.g., Swedish, Danish, Norwegian) instead of always using en-US as the source."
             }
           },
           "required": [
@@ -1120,7 +1120,7 @@
       {
         "name": "saveTranslatedTexts",
         "displayName": "Save Translation to a XLF file",
-        "modelDescription": "This tool saves a translation to a specified XLF file. It takes an array of objects containing the id, source text and target text that should be saved to the XLF file. The performance is better when calling this tool as few times as possible, with many translations in each batch. This can be used when working with translations.",
+        "modelDescription": "This tool writes translated texts to a specified XLF file. It accepts an array of translation objects, each containing a unique identifier and the translated text to be saved. For optimal performance, submit multiple translations in a single batch rather than making individual calls. This tool enables efficient updating of XLF files with new or revised translations, maintaining the integrity of the XLIFF format while updating only the specified translation units.",
         "tags": [
           "xliff",
           "translation"
@@ -1133,21 +1133,21 @@
           "properties": {
             "filePath": {
               "type": "string",
-              "description": "The absolute path to the XLF file where the translations should be saved. This file should already exist and contain the source texts that should be translated."
+              "description": "The absolute path to the existing XLF file where translations should be saved. The file must already contain the translation units with source texts that correspond to the translations being provided."
             },
             "translations": {
               "type": "array",
-              "description": "An array of objects containing the id and target text that should be saved to the XLF file.",
+              "description": "An array of translation objects to be saved to the XLF file. Each object must contain both the unique identifier of the translation unit and the translated text to be inserted.",
               "items": {
                 "type": "object",
                 "properties": {
                   "id": {
                     "type": "string",
-                    "description": "The id of the translation unit."
+                    "description": "The unique identifier of the translation unit in the XLF file. This ID must match an existing translation unit in the file."
                   },
                   "targetText": {
                     "type": "string",
-                    "description": "The target text of the translation unit."
+                    "description": "The translated text to be saved as the target content for the specified translation unit. This will replace any existing target text for the given unit."
                   }
                 },
                 "required": [
